# Gnosis-Safe-SlackBot

./: .env.template  .gitignore  README.md  pyproject.toml
app/: bot.py
iac/: main.tf
scripts/: create_zip.sh
